2017-01-27  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftview] Align with current FreeType.

	* src/ftview.c (write_header): s/GB2312/PRC/.
	(Process_Event): `FT_Library_SetLcdFilterWeights' now enables
	filtering without `FT_Library_SetLcdFilter'.

2016-12-30  Werner Lemberg  <wl@gnu.org>

	* Version 2.7.1 released.
	=========================


	Tag sources with `VER-2-7-1'.

	* README: Updated.
	* src/*.1: Updated.
	* src/ftinspect.pro: Updated.

2016-12-27  Werner Lemberg  <wl@gnu.org>

	[ftmulti] Minor.

	* src/ftmulti.c (Process_Event, main): If MM, round design
	coordinates.

2016-12-25  Werner Lemberg  <wl@gnu.org>

	Fixes for clang++.

	* Makefile (COMPILE): Don't add `-std=c99' if using a C++ compiler.

	* src/ftbench.c (_GNU_SOURCE): Declare only if not already defined.

	* src/ftcommon.c (_GNU_SOURCE): Declare only if not already defined.
	(FTDemo_Install_Font): Use proper case for `FT_Select_Charmap'.

	* src/ftmulti.c (main): Use proper case for `FT_Select_Charmap'.

2016-12-20  Werner Lemberg  <wl@gnu.org>

	* src/ftmulti.c: Minor clang fixes.

2016-12-19  Werner Lemberg  <wl@gnu.org>

	[ftmulti] Support multiple engines.

	Similar to other programs, use the `H' key to cycle through engines
	(if available).

	* src/ftmulti.c: Include FT_FONT_FORMATS_H, FT_MODULE_H,
	FT_TRUETYPE_DRIVER_H, FT_CFF_DRIVER_H.
	(N_CFF_HINTING_ENGINES): New macro.
	(cff_hinting_engine, tt_interpreter_versions,
	num_tt_interpreter_versions, tt_interpreter_version_idx,
	font_format): New global variables.
	(Help): Updated.
	(cff_hinting_engine_change, tt_interpreter_version_change): New
	functions.
	(Process_Event): Handle key `H'.
	(main): Set up selection of CFF and TrueType engine versions.
	Display selected engine.
	Force redisplay of current font if `H' key was pressed.

2016-11-06  Werner Lemberg  <wl@gnu.org>

	* src/ftbench.c (main): Adjust size argument for bitmap strikes.

	For bitmap-only fonts we enforce the selection of the first bitmap
	strike size.